[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-rpc = { version = "0.6.0", features = ["quinn-transport"] }
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
