[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-rpc = { version = "0.6", features = ["macros", "quinn-transport"] }
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
quinn = "0.10"
rcgen = "0.10"
rustls = "0.21"